--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <title>Test React</title>
     <!-- <script src="http://requirejs.org/docs/release/2.1.11/minified/require.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.0/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
     <script> __React = React; </script>
@@ -17,7 +17,7 @@
     <div id="content"></div>
     <!-- <script type="text/babel" src="scripts/hello_react.jsx"></script> -->
     <!-- <script type="text/babel" src="hello_react_typescript.js"></script> -->
-    <script src="scripts/hello_react_typescript.js"></script>
+    <script src="src/bundle.js"></script>
     <script type="text/babel">
       // To get started with this tutorial running your own code, simply remove
       // the script tag loading scripts/example.js and start writing code here.
