--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test React</title>
   </head>
   <body>
     <div id="content"></div>
-    <!-- <script type="text/babel" src="scripts/hello_react.jsx"></script> -->
-    <!-- <script type="text/babel" src="hello_react_typescript.js"></script> -->
     <script src="scripts/bundle.js"></script>
-    <script type="text/babel">
-      // To get started with this tutorial running your own code, simply remove
-      // the script tag loading scripts/example.js and start writing code here.
-    </script>
   </body>
 </html>
