--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test React</title>
+    <script src="src/libs/Detector.js"></script>
   </head>
   <body>
     <div id="content"></div>
